--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "framer-motion": "^11.3.30",
     "next": "14.2.5",
     "react": "^18",
